--- a/Frontend/src/component/Portfolio/Portfolio.css
+++ b/Frontend/src/component/Portfolio/Portfolio.css
@@ -1,25 +1,47 @@
+.Againsearch {
+  display: grid;
+  grid-template-columns: 0.5fr 3.5fr;
+}
+
+.filter-area {
+  position: sticky;
+    top: 170px;
+    height: 100vh;
+}
+
+
+.search-title{
+  color: white;;
+  margin-left: 5px;
+  margin-bottom: 2px;
+  padding-bottom: 0px;
+  font-size: large;
+  /* border :1px solid; */
+}
 .Portfolio {
-  position: relative;
+  /* position: relative; */
 }
 .Portfolio .box {
   border-radius: 10px;
-  position: relative;
+  /* position: relative; */
+  /* padding:0px; */
 }
 .Portfolio .box:hover {
   background: none;
   transform: translateY(-0);
 }
 
-.Portfolio .img {
-  height: 300px;
+/* .Portfolio .img {
+  height: 100px;
   overflow: hidden;
   transition: 0.5s;
 }
 .Portfolio img {
-  width: 100%;
+  height: 100%;
+  width: auto;
   border-radius: 10px;
   transition: 0.5s;
-}
+} */
 .Portfolio .box .img:hover img {
   transform: scale(1.2);
 }
@@ -113,7 +135,7 @@ body.active-modal {
 }
 .modal-text button {
   margin-right: 20px;
-  color: #ff014f;
+  color: #fdfdfd;
 }
 .modal-text button i {
   margin-left: 10px;
@@ -163,5 +185,31 @@ body.active-modal {
   margin-bottom: 10px;
   margin-top: 10px;
   padding-left: 10px;
-  background-color: #f67ca1;
+  color:white;
+  background-color: #2c702e;
+}
+
+
+/* sortbtn */
+.sorting {
+  margin-left: 5px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.sort-buttons {
+  font-weight: lighter;
+  font-size: small;
+  display: flex;
+}
+
+.sort-btn {
+  background-color: #cbcbcb;
+  margin-left: 3px;
+  margin-right: 10px;
+}
+
+.btn-primary {
+  /* Add your button styling here */
 }
