--- a/Frontend/src/component/Search/1.css
+++ b/Frontend/src/component/Search/1.css
@@ -8,10 +8,13 @@
 .searchbox {
   text-align: center;
   padding: 20px;
-  background-color: rgb(209, 200, 200);
+  background-color: #d2edc8;
   border-radius: 10px;
 }
-
+.bartile{
+  align-items: center;
+  text-align: center;
+}
 .text1 h1 {
   font-size: 30px;
   margin: 0;
@@ -20,7 +23,7 @@
 .text2 {
   font-size: 18px;
   margin-top: 10px;
-  color: #f1568a;
+  color: #2c702e;
 }
 
 .bar {
@@ -30,9 +33,9 @@ display: flex;
   margin-top: 20px;
   /* background-color: #007bff; */
 }
-
 .input-field {
   display: flex;
+  text-align: center;
   align-items: center;
   
 }
@@ -51,12 +54,12 @@ display: flex;
   color: white;
   height: 38px;
   padding: 0 15px;
-  border: 1px solid #f48282;
+  border: 1px solid #4caf50;
   border-left: none;
-  background-color: #f1568a;
+  background-color: #4caf50;
   border-radius:50%;
 }
-
+/* search wala */
 .companiesbox {
   margin-top: 40px;
 }
@@ -68,17 +71,58 @@ display: flex;
 
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 10px;
-  margin-top: 10px;
+  grid-template-columns: repeat(6, 1fr);
+  grid-gap: 2px;
+  margin-top: 2px;
 }
 
-.box {
-  border: 1px solid #464545;
-  padding: 10px;
+.boxse {
+  border: 1px solid#4caf50;
+  background-color: #4caf50;
+  padding: 1px;
+  border-radius: 4px;
+}
+/* allproduct wala*/
+.companiesboxes {
+  margin-top: 5px;
+  margin-left: 5px;
+}
+
+.companiesboxes h3 {
+  color: white;;
+  font-size: 13px;
+  margin: 0;
+}
+
+.grid-containers {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-gap: 2px;
+  margin-top: 2px;
+}
+
+.boxses {
+  border: 1px solid #292728;
+  font-size: 10px;
+  width: 150px;
+  background-color: rgb(254, 254, 254);
+  padding: 1px;
   border-radius: 4px;
 }
 
+.upperbar {
+  background-color: #2c702e;
+  transition: top 0.3s;
+  position: static;
+}
+
+.upperbar.fixed {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 9999;
+}
 .checkbox-circle2 {
   display: flex;
   align-items: center;
@@ -105,8 +149,8 @@ display: flex;
 }
 
 .checkbox-circle2 input[type="checkbox"]:checked+label:before {
-  background-color: #007bff;
-  border-color: #007bff;
+  background-color: #2c702e;
+  border-color:#2c702e;
 }
 
 .checkbox-circle2 input[type="checkbox"]:checked+label:after {
@@ -120,4 +164,7 @@ display: flex;
   transform: rotate(45deg);
   top: 2px;
   left: 6px;
+}
+.modal{
+  background-color: #f9f9f9;
 }
