--- a/Frontend/src/Pages/subscription/Subscription.css
+++ b/Frontend/src/Pages/subscription/Subscription.css
@@ -15,6 +15,7 @@
 }
 .contain{
     display: flex;
+    flex-direction: column;
     gap: 7;
 }
 .free{
@@ -41,9 +42,9 @@
 .main{
     display: flex;
     /* gap: 12; */
-    flex-direction: row;
-    /* justify-content: space-around; */
-    /* padding-right: 20rem; */
+    
+ justify-content: space-around; 
+     padding-right: 20rem; 
     
 }
 .borders{
@@ -53,3 +54,46 @@
 .silver{
     border-right: 1px solid black;
 }
+
+/* Dropdown Button */
+.dropbtn {
+    background-color: #04AA6D;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+  }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: #ddd;}
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {display: block;}
+  
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {background-color: #3e8e41;}
+  
